MP2-2920 Fixed layout issues for payments

--- a/jems-ui/src/app/payments/payments-to-projects-page/payments-to-project-detail-page/payments-to-project-detail-page.component.scss
+++ b/jems-ui/src/app/payments/payments-to-projects-page/payments-to-project-detail-page/payments-to-project-detail-page.component.scss
@@ -142,3 +142,17 @@ h3#project-title {
   flex-wrap: wrap;
 }
 
+.display-row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.column-checkbox-text-content {
+  margin-left: 0.75rem !important;
+  align-items: center;
+  font-size: 0.75rem;
+  line-height: 1.2em;
+}
+
